2019-10-12  Jan Hubicka  <hubicka@ucw.cz>

	* lto.c (lto_wpa_write_files): Do not update bodies of clones.

2019-10-11  Jan Hubicka  <hubicka@ucw.cz>

	* lto.c (lto_wpa_write_files): Call ggc_trim.

2019-10-11  Jan Hubicka  <hubicka@ucw.cz>

	* lto.c (lto_wpa_write_files): Prepare all bodies for streaming.

2019-10-10  Richard Biener  <rguenther@suse.de>

	* lto-common.c (unify_scc): Do not merge anonymous NAMESPACE_DECLs.

2019-10-04  Joseph Myers  <joseph@codesourcery.com>

	* lto-lang.c (flag_isoc2x): New variable.

2019-09-18  Richard Biener  <rguenther@suse.de>

	PR lto/91763
	* lto.c (lto_materialize_function): Initialize EH by looking
	at the function personality and flag_exceptions setting.

2019-08-23  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/91283
	* lto-lang.c (lto_post_options): Set flag_excess_precision instead of
	flag_excess_precision_cmdline.  Remove comment.

2019-08-13  Richard Sandiford  <richard.sandiford@arm.com>

	PR middle-end/91421
	* lto-common.c (compare_tree_sccs_1): Use DECL_UNCHECKED_FUNCTION_CODE
	instead of DECL_FUNCTION_CODE.
	* lto-symtab.c (lto_symtab_merge_p): Likewise.

2019-08-01  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* Make-lang.in (lto.install-common): Remove unnecessary slash
	between $(DESTDIR) and $(bindir).

2019-07-25  Martin Liska  <mliska@suse.cz>

	* lto-common.c (compare_tree_sccs_1): Use new macros
	(e.g. DECL_SET_LAMBDA_FUNCTION and DECL_LAMBDA_FUNCTION_P).

2019-07-22  Giuliano Belinassi  <giuliano.belinassi@usp.br>

	* lang.opt (flag_dump_callgraph): New flag.
	* lto-dump.c (dump_symtab_graphviz): New function.
	(dump_tool_help): New option.
	(lto_main): Handle graphviz dumping.

2019-07-18  Jan Hubicka  <hubicka@ucw.cz>

	* lto-common.c (gimple_register_canonical_type_1): Do not look for
	non-ODR conflicts of types in anonymous namespaces.
	(unify_scc): Do not merge anonymous namespace types.

2019-07-09  Martin Sebor  <msebor@redhat.com>

	PR c++/61339