@@ -1,5 +1,10 @@
 2019-10-12  Jan Hubicka  <hubicka@ucw.cz>
 
+	* lto-common.c (read_cgraph_and_symbols): Grow ggc memory use after
+	summary streaming.
+
+2019-10-12  Jan Hubicka  <hubicka@ucw.cz>
+
 	* lto.c (lto_wpa_write_files): Do not update bodies of clones.
 
 2019-10-11  Jan Hubicka  <hubicka@ucw.cz>
